src/objects/Compliance_Review__c.object
<CustomObject>
    <description>Used to represent a review for tracking compliance.</description>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Document that is the subject of this compliance review.</description>
        <label>Document</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Compliance Reviews</relationshipLabel>
        <relationshipName>Compliance_Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>The date in which this Compliance Review becomes effective.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <description>Date that a notification to complete the Compliance Review should be/was sent.</description>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publish_Status__c</fullName>
        <description>Status of the Compliance Review regarding it&apos;s publication.</description>
        <label>Publish Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Station to which the Compliance Review belongs to.</description>
        <label>Station</label>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>Compliance Reviews</relationshipLabel>
        <relationshipName>Compliance_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the Compliance Review.</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Compliance Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Document__c</columns>
        <columns>Publish_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CMPR-{0000000000}</displayFormat>
        <label>Compliance Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Reviews</pluralLabel>
    <recordTypes>
        <fullName>IGOM</fullName>
        <active>true</active>
        <label>IGOM</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>